updates and added contact frontend

--- a/src/app/layout/home/home-content/home-content.component.html
+++ b/src/app/layout/home/home-content/home-content.component.html
@@ -1,5 +1,5 @@
 <section class="agency agency-content about-bg">
-    <h3 class="text-as-shadow">About <br/> us</h3>
+    <h3 class="text-as-shadow">Our <br/> Pack</h3>
     <div class="container">
         <div class="row">
             <div class="col-xl-9 offset-xl-3 col-md-9 offset-md-3">
@@ -12,8 +12,11 @@
                     </div>
                 </div>
 
-                <p class="agency-para">We help you to figure out what you need to go and build it. A business website for sales?, a POC?, branding platform? sales and communctions?
-                    We got all your needs covered at 3VA Studios
+                <p class="agency-para">We provide web development services for Irish businesses to build their brand and grow online.
+                    
+                </p>
+                <p class="agency-para">
+                    Websites or web apps, we build solutions for general business needs to more advanced systems for operations, sales and communications
                 </p>
                 <!-- <a href="#" class=" btn btn-default btn-gradient text-white">view more</a> -->
             </div>
