--- a/src/app/layout/home/home-header/home-header.component.html
+++ b/src/app/layout/home/home-header/home-header.component.html
@@ -9,8 +9,7 @@
                                 <h1 class="text-uppercase"><span class="bold-text">3VA Studios</span> </h1>
                             </div>
                             <div class="header-sub-text">
-                                <p>Web Development services for Irish businesses,
-                                    supporting local to build and grow online
+                                <p>Experts in web tech for small businesses.
                                 </p>
                             </div>
                             <div class="link-horizontal">
