clean up for final prod push before holidays

--- a/src/app/layout/home/home-contact/home-contact.component.html
+++ b/src/app/layout/home/home-contact/home-contact.component.html
@@ -4,7 +4,9 @@
             <div class="col-md-10">
                 <div class="title title3">
                     <div class="main-title">
-                        <h2 class=" text-white">Contact Us</h2>
+                        <h2 class=" text-white">Contact Us On:</h2>
+                        <br>
+                        <h2 class=" text-white">cantoncodez@gmail.com</h2>
                     </div>
                     <!-- <div class="sub-title">
                         <P class="text-white">Register now and reserve your seat for this
@@ -20,7 +22,7 @@
                     ></iframe>
                 </div>
             </div> -->
-            <div class="col-xl-8 col-md-12" style="border-radius: 5px;">
+            <!-- <div class="col-xl-8 col-md-12" style="border-radius: 5px;">
                 <div class="bg-white" style=" border-radius: 5px;">
 
                     <form>
@@ -57,9 +59,9 @@
 
                         <a class="btn btn-default primary-btn m-0-auto " style="color: blue;">send</a>
                     </form>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </div>
     </div>
-    <img src="assets/images/event/footer/2.png" alt="" class="set-abs top-0 plane2">
+    <img src="assets/images/plane.png" alt="" class="set-abs top-0 plane2">
 </footer>
