--- a/src/app/layout/home/home-header/home-header.component.html
+++ b/src/app/layout/home/home-header/home-header.component.html
@@ -1,22 +1,22 @@
-<section class="agency header" id="header">
-    <div class="agency bg" [ngStyle]="{'background-image': 'url(assets/images/agency/slider/slider.png)'}">
+<section class="agency header" id="header" >
+    <div class="agency bg" [ngStyle]="{'background-image': 'url(assets/images/agency/slider/slider.png)'}" style="background-color: white" >
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="center-text">
-                        <div>
+                        <div  style="margin-top:100px;">
                             <div class="header-text">
-                                <h1 class="text-uppercase"><span class="bold-text">3VA Studios</span> </h1>
+                                <h1 class="text-uppercase" style="color:black"><span class="bold-text">3VA Studios</span> </h1>
                             </div>
                             <div class="header-sub-text">
-                                <p>Experts in web tech for small businesses.
+                                <p style="color:black">Experts in web tech for small businesses.
                                 </p>
                             </div>
                             <div class="link-horizontal">
                                 <ul>
-                                    <li>
+                                    <!-- <li>
                                         <a class=" btn btn-default btn-gradient text-white">request a quote</a>
-                                    </li>
+                                    </li> -->
                                     <!-- <li>
                                         <a class="btn btn-default btn-gradient text-white active">start now</a>
                                     </li> -->
