--- a/src/app/layout/home/home-nav/home-nav.component.html
+++ b/src/app/layout/home/home-nav/home-nav.component.html
@@ -1,15 +1,15 @@
-<header class="home loding-header nav-abs custom-scroll header-rel">
+<header class="home loding-header nav-abs custom-scroll header-rel" style="margin-bottom: 20px;">
     <div class="container">
         <div class="row">
-            <div class="col-12" style="color:black">
-                <nav class="navbar-expand-lg theme-nav w-100" style="color:black">
+            <div class="col-12" style="">
+                <nav class="navbar-expand-lg theme-nav w-100" style="margin-bottom: 20px;">
                   <!-- <a class="navbar-brand d-none d-lg-block m-0">
                       <img alt="logo" class="logo-abs h-auto" src="assets/images/logo/7.png">
                   </a> -->
                   <a class="logo-responsive navbar-brand d-lg-block d-lg-none">
                       <img alt="logo" src="assets/images/3VA_logo.png">
                   </a>
-                  <app-center-menu  class="" style="color:black"></app-center-menu>
+                  
                 </nav>
             </div>
         </div>
