--- a/src/app/layout/home/home-team/home-team.component.html
+++ b/src/app/layout/home/home-team/home-team.component.html
@@ -11,7 +11,7 @@
                         </h2>
                     </div>
                     <div class="format-sub-text">
-                        <p class="about-para">TESTWith our variety in expertise we will cater for any techniqual needs</p>
+                        <p class="about-para">With our variety in expertise we will cater for any techniqual needs</p>
                     </div>
                     
                 </div>
