--- a/src/app/layout/home/home-header/home-header.component.html
+++ b/src/app/layout/home/home-header/home-header.component.html
@@ -6,10 +6,10 @@
                     <div class="center-text">
                         <div  style="margin-top:100px;">
                             <div class="header-text">
-                                <h1 class="text-uppercase" style="color:black"><span class="bold-text">3VA Studios</span> </h1>
+                                <h1 class="text-uppercase" ><span class="bold-text">Welcome To</span> </h1>
                             </div>
                             <div class="header-sub-text">
-                                <p style="color:black">Experts in web tech for small businesses.
+                                <p style="color:black">3VA Studios, a web design company
                                 </p>
                             </div>
                             <div class="link-horizontal">
