--- a/src/app/layout/home/home-nav/home-nav.component.html
+++ b/src/app/layout/home/home-nav/home-nav.component.html
@@ -4,11 +4,13 @@
             <div class="col-12" style="">
                 <nav class="navbar-expand-lg theme-nav w-100" style="margin-bottom: 20px;">
                   <!-- <a class="navbar-brand d-none d-lg-block m-0">
-                      <img alt="logo" class="logo-abs h-auto" src="assets/images/logo/7.png">
+                      <img alt="logo" class="logo-abs h-auto" src="assets/images/3VA_logo.png">
                   </a> -->
-                  <a class="logo-responsive navbar-brand d-lg-block d-lg-none">
+                  <a class="logo-responsive navbar-brand">
                       <img alt="logo" src="assets/images/3VA_logo.png">
                   </a>
+
+                  <!--create a  contact form-->
                   
                 </nav>
             </div>
