--- a/src/app/layout/home/home-services/home-services.component.html
+++ b/src/app/layout/home/home-services/home-services.component.html
@@ -1,18 +1,22 @@
 <section class="agency format service-bg" id="features" [ngStyle]="{'background-image': 'url(assets/images/agency/service/services-backgrondpng.png)'}">
     <div class="container">
         <div class="row">
+            <h3 class="text-as-shadow">Our <br/> Services</h3>
             <div class="col-md-4 offset-lg-1">
                 <div class="center-text">
+                    
                     <div class="format-container">
-                        <h6 class="borders-before text-uppercase">
+                        <!-- <h6 class="borders-before text-uppercase">
                             <span class="">Our services</span>
-                        </h6>
-                        <div class="format-head-text">
-                            <h2 class="about-font-header">What is<span class="block-span">
-                                            included?</span></h2>
+                        </h6> -->
+                        <div class="format-head-text pt-3">
+                            <h2 class="about-font-header">We create easy to use  
+                                <span class="block-span">
+                                    websites that also look great!</span></h2>
                         </div>
                         <div class="format-sub-text">
-                            <p class="about-para">We provide many techniqual assets and tools for your business</p>
+                            <p class="about-para">Our Team of experts will work with you to make sure your website is just right.
+                            </p>
                         </div>
                         <!-- <a href="#" class=" btn btn-default btn-gradient text-white">view more</a> -->
                     </div>
@@ -36,7 +40,7 @@
                             <li class="about-icon">
                                 <a href="#" class="center-content"><img src="assets/images/agency/service/2.png"
                                                                         alt="">
-                                    <h5>Backend Development</h5>
+                                    <h5>Back-end Development</h5>
                                 </a>
                             </li>
                             <li class="about-icon">
