--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,9 +1,11 @@
 <app-home-nav></app-home-nav>
 <app-home-header></app-home-header>
-<app-home-content></app-home-content>
-<app-home-services-scroll></app-home-services-scroll>
-<app-home-counter></app-home-counter>
-<app-home-team></app-home-team>
+<app-get-in-touch></app-get-in-touch>
+<app-home-services></app-home-services>
 <app-home-contact></app-home-contact>
+<!-- <app-home-services-scroll></app-home-services-scroll> -->
+<!-- <app-home-counter></app-home-counter> -->
+<!-- <app-home-team></app-home-team> -->
 
+<app-home-footer></app-home-footer>
 
