--- a/src/assets/css/color-2.css
+++ b/src/assets/css/color-2.css
@@ -74,7 +74,7 @@ body {
   font-family: 'Poppins', sans-serif;
   position: relative;
   font-size: 14px;
-  color: #434345;
+  color: #0d0d9b;
   overflow-x: hidden; }
   body.event {
     font-family: 'Work Sans', sans-serif; }
